*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.13 ===
* Equalizer is now smoothly operating with frequency/gain/q factor for each
  mode: FIR, IIR, FFT, SPM.
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Fixed invalid version number in metadata.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Added built-in presets for some music genres (contributed by Largos @ linuxmusicians).
* Added possibility to add several filters by performing mouse double click on the graph area.
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated plugin metadata (contributed by Dennis Braun).
* Updated dependencies and build scripts.
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Initial release.
