@@ -5,6 +5,7 @@
 === 1.0.13 ===
 * Equalizer is now smoothly operating with frequency/gain/q factor for each
   mode: FIR, IIR, FFT, SPM.
+* Added popup menu for more precise control over the equalizer dot on the graph.
 * Updated build scripts and dependencies.
 
 === 1.0.12 ===
